--- a/views/comment.html
+++ b/views/comment.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="../index.html">Home</a>
+        <a href="./home.html">Home</a>
     </div>
     <div>
     <section>
