--- a/views/register.html
+++ b/views/register.html
@@ -115,7 +115,7 @@ body {
             <input type="text" class="name" placeholder="name" name="name"/>
             <input type="password" class="password" placeholder="password" name="password"/>
             <button class="register">Register</button>
-            <p class="message">Registered Already? <a href="./login.html">Login</p>
+            <p class="message">Registered Already? <a href="../index.html">Login</p>
           </form>
         </div>
       </div>
@@ -144,7 +144,7 @@ register.onclick = async (event) =>{
     }).then((res)=>{
         if(res.status == 200){
             localStorage.setItem( 'x-access-token', res.data.data.token)
-            window.location.href = "../index.html" ; 
+            window.location.href = "./home.html" ; 
         }
     }).catch((res) =>{  
     console.log(res);
